--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
-    id 'java'
+  id 'java'
+  id "net.ltgt.apt-idea" version "0.15"
 }
 
 version '1.0-SNAPSHOT'
@@ -7,9 +8,10 @@ version '1.0-SNAPSHOT'
 sourceCompatibility = 1.8
 
 repositories {
-    mavenCentral()
+  mavenCentral()
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+  implementation 'com.google.dagger:dagger:2.23.2'
+  apt 'com.google.dagger:dagger-compiler:2.23.2'
 }
